# watchopolis

./: PRIVACY.md  README.md
apps/wearos-android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/wearos-android/app/: build.gradle.kts  proguard-rules.pro
apps/wearos-android/app/src/main/: AndroidManifest.xml
apps/wearos-android/app/src/main/cpp/: CMakeLists.txt  micropolis_jni.cpp
apps/wearos-android/app/src/main/java/com/watchopolis/wear/: MainActivity.kt
apps/wearos-android/app/src/main/java/com/watchopolis/wear/engine/: Budget.kt  CityAssets.kt  CityCatalog.kt  Demands.kt  Evaluation.kt  GameTools.kt  MessageText.kt  MicropolisEngine.kt  ZoneStatus.kt
apps/wearos-android/app/src/main/java/com/watchopolis/wear/game/: Game.kt  SoundManager.kt
apps/wearos-android/app/src/main/java/com/watchopolis/wear/render/: TileAtlas.kt  TileColors.kt
apps/wearos-android/app/src/main/java/com/watchopolis/wear/ui/: AboutScreen.kt  BudgetScreen.kt  CitiesScreen.kt  EvaluationScreen.kt  LoadCityScreen.kt  MapScreen.kt  MenuScreen.kt  NewCityScreen.kt  Rotary.kt  ScenarioScreen.kt  Typography.kt  ZoneStatusScreen.kt
apps/wearos-android/app/src/main/res/values/: strings.xml
